Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83989

qmllint produces Clang 10 warnings about copies in range-for

XMLWordPrintable

    • 95ece56efa0b2a3b480ee3a5761d85b348c01377 (qt/qtdeclarative/dev) bf601b4ab1b4942fe6f34d87d290455a321402fa (qt/qtdeclarative/5.15)

      scopetree.cpp:212:21: error: loop variable 'enumerator' of type 'const MetaEnum' creates a copy from type 'const MetaEnum' [-Werror,-Wrange- loop-construct]
      

      See https://codereview.qt-project.org/c/qt/qtdeclarative/+/299046

      The files were moved in dev, so the patch doesn't apply. Please apply it to the right place, then properly backport it to 5.15.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            thiago Thiago Macieira
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes