Fix Clang 10 warning about creating copies in range-for

We should not copy the loop variables.

Fixes: QTBUG-83989
Pick-to: 5.15
Change-Id: Ic94710a2c08aa19656c5e1853c40b10b203bca0e
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>