tools/qmllint/findunqualified.cpp
@@ -386,7 +386,7 @@ void FindUnqualifiedIDVisitor::importExportedNames(const QStringRef &prefix, QSt
         if (scope) {
             if (scopes.contains(scope)) {
                 QString inheritenceCycle = name;
-                for (const auto seen: qAsConst(scopes)) {
+                for (const auto &seen: qAsConst(scopes)) {
                     inheritenceCycle.append(QLatin1String(" -> "));
                     inheritenceCycle.append(seen->superclassName());
                 }
